--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.daasuu:BubbleLayout:1.2.0'
+    implementation 'com.joanzapata.iconify:android-iconify-fontawesome:2.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
